--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,12 +9,13 @@ Grandes telas: acima de 1200px
 */
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-    body {
+    body { /* CONFIGURAÇÃO PARA TABLET */
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     
     section#login {
         width: 80vw;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -38,12 +39,13 @@ Grandes telas: acima de 1200px
 }
 
 @media screen and (min-width: 992px) {
-        body {
+        body { /* CONFIGURAÇÃO PARA DESKTOP */ 
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -62,5 +64,7 @@ Grandes telas: acima de 1200px
     }
     div#formulario > p {
         font-size: 1.2em;
+        margin: 10px 0px;
+        
     }
 }
