--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,6 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
@@ -40,6 +39,7 @@ section#login {
 
     transition: width 0.5s, height 0.5s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 
 }
 
@@ -70,14 +70,41 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > i {
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #5fcfcc;
+    font-size: 1em;
+    width: calc(100% - 45px);
+
+    /* width: */;
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;    
+    transform: translateY(-12px);
+
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
@@ -117,4 +144,6 @@ form > a.botao:hover {
 form  > a.botao > i {
     font-size: 0.8em;
 }
+
+
 
